# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-04-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Service API services_status process identifiers in
      pids_erlang and pids_os lists
    * Add cloudi_service_api_requests JSON support for
      services_status pids_erlang and pids_os data

2021-04-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem use_expires argument
    * Improve cloudi_core supervisor child spec order
    * Update supool

2021-04-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem replace_index argument for
      writing the cache replacement data to the filesystem
    * Add cloudi_service_filesystem debug/debug_level arguments for
      logging the currently loaded files_size in bytes

2021-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Update CloudI Service API README

2021-04-03 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_filesystem replace argument usage
      so files are sorted based on PriorityKey and Size
      to maximize the number of files loaded
    * Fix cloudi_service_filesystem replace argument lru use
    * Update supool

2021-04-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem replace argument for setting
      the cache replacement algorithm
      (when both refresh and files_size arguments are set,
       default algorithm is LFUDA)
    * Fix cloudi_service_filesystem filesystem access to ensure
      device files, named pipes and other unreadable things
      do not block a refresh
    * Fix cloudi_service_filesystem KiB unit use

2021-03-31 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_filesystem files_size argument use
      to enforce the limit before a single file's contents is read

2021-03-11 Michael Truog   <mjtruog at protonmail dot com>
